--- a/etiqueta-h.html
+++ b/etiqueta-h.html
@@ -86,23 +86,10 @@
 	</div>
 </div>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- The Close Button -->
-  <span class="close">&times;</span>
-
-  <!-- Modal Content (The Image) -->
-  <img class="modal-content" id="img01">
-
-  <!-- Modal Caption (Image Text) -->
-  <div id="caption"></div>
-</div>
 
 
-	
 
-<<script>
+<script>
 // Get the elements with class="column"
 var elements = document.getElementsByClassName("column");
 
