--- a/etiquetas/racionalizado.html
+++ b/etiquetas/racionalizado.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>#TerritorioRacionalizado</title>
-	<link rel="stylesheet" type="text/css" href="css/estilo.css"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 
 </head>
 <body>
