--- a/index.html
+++ b/index.html
@@ -2,32 +2,86 @@
 <html ng-app="myApp" lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ATLAS</title>
+	<title>MEMORIAS CARTOGRÁFICAS</title>
 	<link rel="stylesheet" type="text/css" href="estilos-inicio.css">
-	<script type="text/javascript" src="d3/d3.js"></script>
-	<script src="app-inicio.js"></script> 
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 </head>
 
 <body>
-	<!--   <div class="img-container">
-  <img id="fondo" src="img/prueba-1.jpg" width="100%" height="100%">
-</div>   -->
+
+
+	<div id="sidebar" class="sidebar">
+    	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
+		<ul class="menu">
+    		<li><a href="#">MEMORIAS CARTOGRÁFICAS</a></li>
+    		<li><a href="#">CÓDIGO</a></li>
+    		<li><a href="#">CRÉDITOS IMÁGENES</a></li>
+    		<li><a href="#">SOBRE NOSOTROS</a></li>
+		</ul>
+		
+  </div>
+
+
+	<h1>MEMORIAS CARTOGRÁFICAS</h1>
+
 <div class="contenedor"> 
-	<a href="https://commons.wikimedia.org/wiki/File:Img-prueba.jpg"> <img id="foto-1" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Img-prueba.jpg"></a>
+	<a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="	fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
+	<img src="img/home.jpg"></img>
 </div>
 
-<footer id="etiquetas-fijas">aaaaaa</footer>
+
+<div id="footer">
+	<ul>
+		<li class="foot"><a class="enlaces" href="etiquetas/corpus.html">#Corpus</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/t-racionalizado.html">#TerritorioRacionalizado</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/organizacion.html">#Organizacion</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/racionalizado.html">#Racionalizado</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/cordillera.html">#CordilleraComoEjeEstructural</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/alturas.html">#Alturas</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/t-habitado.html">#TerritorioHabitado</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/caminos.html">#CaminosRecorridos</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/usoyrelacion.html">#UsoyRelacionConLaTierra</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/vivido.html">#EspacioGeograficoVivido</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/t-disputa.html">#TerritorioEnDisputa</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/choque.html">#ChoqueCultural</a></li>
+		<li class="foot"><a class="enlaces" href="etiquetas/disputa.html">#Disputa</a></li>
+		
+	</ul>
 
 
-<script>
-/*Execute the magnify function:*/
-magnify("fondo", 3);
-/*Specify the id of the image, and the strength of the magnifier glass:*/ 
+</div>
+
+
+
+
+
+
+
+
+
+<script type="text/javascript">
+function mostrar() {
+    document.getElementById("sidebar").style.width = "300px";
+    document.getElementById("contenido").style.marginLeft = "300px";
+    document.getElementById("abrir").style.display = "none";
+    document.getElementById("cerrar").style.display = "inline";
+    document.getElementById("todo").setAttribute("style","background-color: rgba(0,0,0,0.5)");
+}
+
+function ocultar() {
+    document.getElementById("sidebar").style.width = "0";
+    document.getElementById("contenido").style.marginLeft = "0";
+    document.getElementById("abrir").style.display = "inline";
+    document.getElementById("cerrar").style.display = "none";
+    document.getElementById("todo").setAttribute("style","opacity:1; -moz-opacity:1; filter:alpha(opacity=1)");
+}
 </script>
-
-
 	
 </body>
+
+
 
 
 </html>
