--- a/etiquetas/caminos.html
+++ b/etiquetas/caminos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>#TerritorioEnDisputa</title>
+	<title>#Caminos</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
 	
 	
-	<div id="sidebar" class="sidebar">
+		<div id="sidebar" class="sidebar">
     	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
 		<ul class="menu">
     		<li><a href="../index.html">MEMORIAS CARTOGRÁFICAS</a></li>
@@ -33,7 +33,7 @@
 <a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
 <div class="header" id="myHeader">
 	  <h1><a href="../index.html" id="titulo">MEMORIAS CARTOGRÁFICAS</a></h1>
-	  <h3>#TerritorioEnDisputa</h3>
+	  <h3>#Caminos</h3>
 
 	</div>
 
@@ -123,10 +123,10 @@
 		<li class="foot"><a class="enlaces" href="cordillera.html">#CordilleraComoEjeEstructural</a></li>
 		<li class="foot"><a class="enlaces" href="alturas.html">#Alturas</a></li>
 		<li class="foot"><a class="enlaces" href="t-habitado.html">#TerritorioHabitado</a></li>
-		<li class="foot"><a class="enlaces" href="caminos.html">#Caminos</a></li>
+		<li class="foot"><a class="enlaces" style="color:rgb(110,79,76)">#Caminos</a></li>
 		<li class="foot"><a class="enlaces" href="usoyrelacion.html">#UsoyRelacionConLaTierra</a></li>
 		<li class="foot"><a class="enlaces" href="vivido.html">#EspacioGeograficoVivido</a></li>
-		<li class="foot"><a class="enlaces" style="color:rgb(110,79,76)">#TerritorioEnDisputa</a></li>
+		<li class="foot"><a class="enlaces" href="t-disputa.html" >#TerritorioEnDisputa</a></li>
 		<li class="foot"><a class="enlaces" href="choque.html">#ChoqueCultural</a></li>
 		<li class="foot"><a class="enlaces" href="disputa.html">#Disputa</a></li>
 		
