--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<link rel="shortcut icon" href="favicon.png">
 </head>
 
 <body>
@@ -15,10 +16,10 @@
 	<div id="sidebar" class="sidebar">
     	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
 		<ul class="menu">
-    		<li><a href="#">MEMORIAS CARTOGRÁFICAS</a></li>
-    		<li><a href="#">CÓDIGO</a></li>
-    		<li><a href="#">CRÉDITOS IMÁGENES</a></li>
-    		<li><a href="#">SOBRE NOSOTROS</a></li>
+    		<li><a>MEMORIAS CARTOGRÁFICAS</a></li>
+    		<li><a href="codigo.html">CÓDIGO</a></li>
+    		<li><a href="creditos.html">CRÉDITOS IMÁGENES</a></li>
+    		<li><a href="nosotros.html">SOBRE NOSOTROS</a></li>
 		</ul>
 		
   </div>
