--- a/etiquetas/organizacion.html
+++ b/etiquetas/organizacion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>#TerritorioEnDisputa</title>
+	<title>#Organizacion</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
@@ -33,7 +33,7 @@
 <a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
 <div class="header" id="myHeader">
 	  <h1><a href="../index.html" id="titulo">MEMORIAS CARTOGRÁFICAS</a></h1>
-	  <h3>#TerritorioEnDisputa</h3>
+	  <h3>#Organizacion</h3>
 
 	</div>
 
@@ -118,7 +118,7 @@
 	<ul>
 		<li class="foot"><a class="enlaces" href="corpus.html">#Corpus</a></li>
 		<li class="foot"><a class="enlaces" href="t-racionalizado.html">#TerritorioRacionalizado</a></li>
-		<li class="foot"><a class="enlaces" href="organizacion.html">#Organizacion</a></li>
+		<li class="foot"><a class="enlaces" style="color:rgb(110,79,76)">#Organizacion</a></li>
 		<li class="foot"><a class="enlaces" href="racionalizado.html">#Racionalizado</a></li>
 		<li class="foot"><a class="enlaces" href="cordillera.html">#CordilleraComoEjeEstructural</a></li>
 		<li class="foot"><a class="enlaces" href="alturas.html">#Alturas</a></li>
@@ -126,7 +126,7 @@
 		<li class="foot"><a class="enlaces" href="caminos.html">#Caminos</a></li>
 		<li class="foot"><a class="enlaces" href="usoyrelacion.html">#UsoyRelacionConLaTierra</a></li>
 		<li class="foot"><a class="enlaces" href="vivido.html">#EspacioGeograficoVivido</a></li>
-		<li class="foot"><a class="enlaces" style="color:rgb(110,79,76)">#TerritorioEnDisputa</a></li>
+		<li class="foot"><a class="enlaces" href="t-disputa.html" >#TerritorioEnDisputa</a></li>
 		<li class="foot"><a class="enlaces" href="choque.html">#ChoqueCultural</a></li>
 		<li class="foot"><a class="enlaces" href="disputa.html">#Disputa</a></li>
 		
