--- a/etiquetas/t-habitado.html
+++ b/etiquetas/t-habitado.html
@@ -3,21 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>#TerritorioHabitado</title>
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css"><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<link rel="shortcut icon" href="../favicon.png">
 
 </head>
 <body>
 	
 	
-<div id="sidebar" class="sidebar">
+	<div id="sidebar" class="sidebar">
     	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
 		<ul class="menu">
     		<li><a href="../index.html">MEMORIAS CARTOGRÁFICAS</a></li>
-    		<li><a href="#">CÓDIGO</a></li>
-    		<li><a href="#">CRÉDITOS IMÁGENES</a></li>
-    		<li><a href="#">SOBRE NOSOTROS</a></li>
+    		<li><a href="../codigo.html">CÓDIGO</a></li>
+    		<li><a href="../creditos.html">CRÉDITOS IMÁGENES</a></li>
+    		<li><a href="../nosotros.html">SOBRE NOSOTROS</a></li>
 		</ul>
 		
   </div>
@@ -121,7 +123,7 @@
 		<li class="foot"><a class="enlaces" href="cordillera.html">#CordilleraComoEjeEstructural</a></li>
 		<li class="foot"><a class="enlaces" href="alturas.html">#Alturas</a></li>
 		<li class="foot"><a class="enlaces" style="color:rgb(110,79,76)">#TerritorioHabitado</a></li>
-		<li class="foot"><a class="enlaces" href="caminos.html">#CaminosRecorridos</a></li>
+		<li class="foot"><a class="enlaces" href="caminos.html">#Caminos</a></li>
 		<li class="foot"><a class="enlaces" href="usoyrelacion.html">#UsoyRelacionConLaTierra</a></li>
 		<li class="foot"><a class="enlaces" href="vivido.html">#EspacioGeograficoVivido</a></li>
 		<li class="foot"><a class="enlaces" href="t-disputa.html">#TerritorioEnDisputa</a></li>
