--- a/etiquetas/alturas.html
+++ b/etiquetas/alturas.html
@@ -44,7 +44,7 @@
 <div id="contenedor">
 	<div class="row"> 
 	  <div class="column">
-	    <a href="https://google.com" target="_blank"><img src="../img/H/img-00001.jpg" style="width:100%"></a>
+	    <a href="http://memoriascartograficas.tumblr.com/post/136878049843/acsu-con-figuras-zoomorfas-diferentes-aves-y" target="_blank"><img src="http://78.media.tumblr.com/7b144d9f6f17b32bffa90772584f625d/tumblr_o0mykwa9gt1uixpyjo1_500.jpg" style="width:100%"></a>
 	    <a href="https://google.com" target="_blank"><img src="../img/H/img-00002.jpg" style="width:100%"></a>
 	    <a href="https://google.com" target="_blank"><img src="../img/H/img-00003.jpg" style="width:100%"></a>
 	    <a href="https://google.com" target="_blank"><img src="../img/H/img-00004.jpg" style="width:100%"></a>
