--- a/creditos.html
+++ b/creditos.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Créditos</title>
 
-	<link rel="stylesheet" type="text/css" href="estilos/estilo-codigo.css">
+	<link rel="stylesheet" type="text/css" href="estilos/estilo-creditos.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
@@ -14,30 +14,31 @@
 <body>
 
 
-	<div id="sidebar" class="sidebar">
-    	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
+<div id="sidebar" class="sidebar">
+    	<a href="#" class="cerrar" onclick="ocultar()"></i></a>
 		<ul class="menu">
-    		<li><a href="index.html">MEMORIAS CARTOGRÁFICAS</a></li>
+    		<li><a href="proyecto.html">SOBRE EL PROYECTO</a></li>
     		<li><a href="codigo.html">CÓDIGO</a></li>
-    		<li><a>CRÉDITOS IMÁGENES</a></li>
+    		<li><a style="color:rgb(110,79,76)">CRÉDITOS IMÁGENES</a></li>
     		<li><a href="nosotros.html">SOBRE NOSOTROS</a></li>
 		</ul>
 		
   </div>
 
 
-<div id="todo">
+
 
 
 <div class="contenedor"> 
-	<a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="	fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
-	<h1>MEMORIAS CARTOGRÁFICAS</h1>
-	<h3>Créditos</h3>
+	<h1><a id="titulo" href="index.html">MEMORIAS CARTOGRÁFICAS</a></h1>
 </div>
 
+<div id="parrafo"><p>Los derechos de las imágenes utilizadas en este proyecto corresponden a las instituciones que me las han facilitado con fines académicos, las cuales han sido referidas en la descripción de cada imágen. Las fotografías de catálogo contenidas en la colección de MUSEF, son de autoría de Fernando Miranda.<br></p>
+<p style="color:rgb(203,79,76)">No poseo derecho alguno sobre las imágenes que se despliegan en este proyecto, han sido utilizadas con fines académicos.</p>
 
-</div>
-	
+
+ </div>
+
 
 
 
