--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,18 @@
 	<meta charset="UTF-8">
 	<title>Sobre Nosotros</title>
 
+	<link rel="stylesheet" type="text/css" href="estilos/estilo-nosotros.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<link rel="shortcut icon" href="favicon.png">
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Créditos</title>
+
 	<link rel="stylesheet" type="text/css" href="estilos/estilo-codigo.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
@@ -14,30 +26,53 @@
 <body>
 
 
-	<div id="sidebar" class="sidebar">
-    	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
+<div id="sidebar" class="sidebar">
+    	<a href="#" class="cerrar" onclick="ocultar()"></i></a>
 		<ul class="menu">
-    		<li><a href="index.html">MEMORIAS CARTOGRÁFICAS</a></li>
+    		<li><a href="proyecto.html">SOBRE EL PROYECTO</a></li>
     		<li><a href="codigo.html">CÓDIGO</a></li>
     		<li><a href="creditos.html">CRÉDITOS IMÁGENES</a></li>
-    		<li><a>SOBRE NOSOTROS</a></li>
+    		<li><a style="color:rgb(110,79,76)">SOBRE NOSOTROS</a></li>
 		</ul>
 		
   </div>
 
 
-<div id="todo">
+
 
 
 <div class="contenedor"> 
-	<a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="	fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
-	<h1>MEMORIAS CARTOGRÁFICAS</h1>
-	<h3>Sobre Nosotros</h3>
+	<h1><a id="titulo" href="index.html">MEMORIAS CARTOGRÁFICAS</a></h1>
 </div>
 
+<div id="parrafo"><p>
 
-</div>
-	
+Kathya Milena<br> 
+katsmoron@gmail.com<br>
+<br>
+Diseñadora gráfica de la Universidad de Chile, desde marzo de 2017 ayudante en Semiótica y Taller III en la carrera de Diseño de la misma universidad.<br>
+Participé con este proyecto, en una etapa anterior, en el III Encuentro Nacional de Nuevos Medios (2015)<br>
+Ponente acerca de Semioanalytics en el Encuentro Nacional de Escuelas de Diseño ENEDI (2017)<br>
+Me interesa la investigación y desarrollo de proyectos en torno a la relación entre las personas, los medios y la imagen.<br>
+<br>
+<br>
+<br>
+<br>
+
+
+Fernando Catalán Bachiloglu ~ programación<br>
+fernandoicatalan@gmail.com<br>
+<br>
+Estudiante de Diseño gráfico en la Universidad de Chile, desde marzo de 2018 monitor en Diseño, Estética y Sociedad en la carrera de Diseño de la misma universidad<br>
+Interesado en la teoría de la imágen y la aplicación a proyectos de carácter medial.
+
+
+
+
+
+</p>
+ </div>
+
 
 
 
