--- a/codigo.html
+++ b/codigo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Codigo</title>
+	<title>Créditos</title>
 
 	<link rel="stylesheet" type="text/css" href="estilos/estilo-codigo.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
@@ -14,11 +14,11 @@
 <body>
 
 
-	<div id="sidebar" class="sidebar">
-    	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
+<div id="sidebar" class="sidebar">
+    	<a href="#" class="cerrar" onclick="ocultar()"></i></a>
 		<ul class="menu">
-    		<li><a href="index.html">MEMORIAS CARTOGRÁFICAS</a></li>
-    		<li><a>CÓDIGO</a></li>
+    		<li><a href="proyecto.html">SOBRE EL PROYECTO</a></li>
+    		<li><a style="color:rgb(110,79,76)">CÓDIGO</a></li>
     		<li><a href="creditos.html">CRÉDITOS IMÁGENES</a></li>
     		<li><a href="nosotros.html">SOBRE NOSOTROS</a></li>
 		</ul>
@@ -26,18 +26,33 @@
   </div>
 
 
-<div id="todo">
+
 
 
 <div class="contenedor"> 
-	<a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="	fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
-	<h1>MEMORIAS CARTOGRÁFICAS</h1>
-	<h3>Código</h3>
+	<h1><a id="titulo" href="index.html">MEMORIAS CARTOGRÁFICAS</a></h1>
 </div>
 
+<div id="parrafo"><p>El código de esta página está escrito en HTML, CSS y Javascript (y algunas librerías).<br> Para cualquier aporte, corrección o comentario seguir el <a id="github" target="blank_" href="https://github.com/bachiloglu/memoriascartograficas">siguiente link</a>.
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<a id="discl">Este sitio está en una primera fase de desarrollo.</a>
 
-</div>
-	
+
+
+</p>
+ </div>
+
 
 
 
