--- a/nosotros.html
+++ b/nosotros.html
@@ -47,8 +47,8 @@
 
 <div id="parrafo"><p>
 
-Kathya Milena<br> 
-katsmoron@gmail.com<br>
+Kathya Milena
+<p style="color:rgb(203,79,76); margin-top:-10px;">katsmoron@gmail.com</p>
 <br>
 Diseñadora gráfica de la Universidad de Chile, desde marzo de 2017 ayudante en Semiótica y Taller III en la carrera de Diseño de la misma universidad.<br>
 Participé con este proyecto, en una etapa anterior, en el III Encuentro Nacional de Nuevos Medios (2015)<br>
@@ -60,8 +60,8 @@ Me interesa la investigación y desarrollo de proyectos en torno a la relación 
 <br>
 
 
-Fernando Catalán Bachiloglu ~ programación<br>
-fernandoicatalan@gmail.com<br>
+Fernando Catalán Bachiloglu ~ programación
+<p style="color:rgb(203,79,76); margin-top:5px;">fernandoicatalan@gmail.com</p>
 <br>
 Estudiante de Diseño gráfico en la Universidad de Chile, desde marzo de 2018 monitor en Diseño, Estética y Sociedad en la carrera de Diseño de la misma universidad<br>
 Interesado en la teoría de la imágen y la aplicación a proyectos de carácter medial.
