--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<a id="tecla-3" href="#" data-toggle="popover" role="button" animation="true" data-placement="left" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/bancl.html'>#BibliotecaYArchivoNacionalDeChile</a>"><img class="icono" src="https://78.media.tumblr.com/d1dfe64d5e881a01562bdcaa61c79e06/tumblr_p7eq96W0tA1xqailxo1_1280.jpg" style="width:100%"></img></a>
 
 
-	<a id="tecla-4" href="#" data-toggle="popover" role="button" animation="true" data-placement="right" data-trigger="focus" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/mclap.html'>#MuseoChilenoDeArtePrecolombino</a>"><img class="icono" src="https://78.media.tumblr.com/a15fd7f15fd3b435b94d8940eb6a0599/tumblr_p7ez2lwMtj1xqailxo1_1280.jpg" style="width:100%"></img></a>
+	<a id="tecla-4" href="#" data-toggle="popover" role="button" animation="true" data-placement="right" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/mclap.html'>#MuseoChilenoDeArtePrecolombino</a>"><img class="icono" src="https://78.media.tumblr.com/a15fd7f15fd3b435b94d8940eb6a0599/tumblr_p7ez2lwMtj1xqailxo1_1280.jpg" style="width:100%"></img></a>
 
 
 
