--- a/creditos.html
+++ b/creditos.html
@@ -17,6 +17,7 @@
 <div id="sidebar" class="sidebar">
     	<a href="#" class="cerrar" onclick="ocultar()"></i></a>
 		<ul class="menu">
+            <li><a href="index.html">INICIO</a></li>
     		<li><a href="proyecto.html">SOBRE EL PROYECTO</a></li>
     		<li><a href="codigo.html">CÓDIGO</a></li>
     		<li><a style="color:rgb(110,79,76)">CRÉDITOS IMÁGENES</a></li>
@@ -30,7 +31,7 @@
 
 
 <div class="contenedor"> 
-	<h1><a id="titulo" href="index.html">MEMORIAS CARTOGRÁFICAS</a></h1>
+	<h1><a id="titulo" href="index.html">MEMORIA CARTOGRÁFICA</a></h1>
 </div>
 
 <div id="parrafo"><p>Los derechos de las imágenes utilizadas en este proyecto corresponden a las instituciones que me las han facilitado con fines académicos, las cuales han sido referidas en la descripción de cada imágen. Las fotografías de catálogo contenidas en la colección de MUSEF, son de autoría de Fernando Miranda.<br></p>
