--- a/etiquetas/t-habitado.html
+++ b/etiquetas/t-habitado.html
@@ -16,6 +16,7 @@
 	<div id="sidebar" class="sidebar">
     	<a href="#" class="boton-cerrar" onclick="ocultar()"><i class="fas fa-bars"></i></a>
 		<ul class="menu">
+			<li><a href="../index.html">INICIO</a></li>
     		<li><a href="../proyecto.html">SOBRE EL PROYECTO</a></li>
     		<li><a href="../codigo.html">CÓDIGO</a></li>
     		<li><a href="../creditos.html">CRÉDITOS IMÁGENES</a></li>
@@ -31,7 +32,7 @@
 <div id="conten">
 <a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
 <div class="header" id="myHeader">
-	  <h1><a href="../index.html" id="titulo">MEMORIAS CARTOGRÁFICAS</a></h1>
+	  <h1><a href="../index.html" id="titulo">MEMORIA CARTOGRÁFICA</a></h1>
 	  <h3>#TerritorioHabitado</h3>
 
 	</div>
