--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp" lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>MEMORIAS CARTOGRÁFICAS</title>
+	<title>MEMORIA CARTOGRÁFICA</title>
 	
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Enriqueta" rel="stylesheet">
@@ -31,22 +31,22 @@
   </div>
 
 
-	<h1 id="titulo">MEMORIAS CARTOGRÁFICAS</h1>
+	<h1 id="titulo">MEMORIA CARTOGRÁFICA</h1>
 
 <div class="contenedor"> 
 	<a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrar()"><i class="	fas fa-bars"></i></a><a id="cerrar" class="abrir-cerrar" href="#" onclick="ocultar()"></a>
 
 
-	<a id="tecla" href="#" data-animation="true" data-toggle="popover"  animation="true" data-placement="left"  data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/mef.html'>#MuseoDeEtnografiaYFolklore</a>"><img class="icono" src="https://78.media.tumblr.com/100588a51136e2fa9550bf546303f7af/tumblr_p7f0e6J9YP1xqailxo1_1280.jpg" style="width:100%"></img></a>
+	<a id="tecla" href="etiquetas/mef.html" data-animation="true" data-toggle="popover" data-trigger="hover" animation="true" data-placement="left"  data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/mef.html'>#MuseoDeEtnografiaYFolklore</a>"><div id="circulo"></div></a>
 	
-	<a id="tecla-1" href="#" data-toggle="popover" role="button" animation="true" data-placement="right"  data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/asa.html'>#AntropologosDelSurAndino</a>"><img class="icono" src="https://78.media.tumblr.com/fe820c76d2d72848a4491a178cd0bf66/tumblr_p7eotxRKgy1xqailxo1_1280.jpg" style="width:100%"></img></a>
+	<a id="tecla-1" href="etiquetas/asa.html" data-toggle="popover" role="button" data-trigger="hover" animation="true" data-placement="right"  data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/asa.html'>#AntropologosDelSurAndino</a>"><div id="circulo"></div></a>
 
-	<a id="tecla-2" href="#" data-toggle="popover" role="button" animation="true" data-placement="right" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/banbol.html'>#BibliotecaYArchivoNacionalDeBolivia</a>"><img class="icono" src="https://78.media.tumblr.com/45cac2951b9de737464592ff749da9cc/tumblr_p7eq0pWFrG1xqailxo1_1280.jpg" style="width:100%"></img></a>
+	<a id="tecla-2" href="etiquetas/banbol.html" data-toggle="popover" role="button" animation="true" data-trigger="hover" data-placement="right" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/banbol.html'>#BibliotecaYArchivoNacionalDeBolivia</a>"><div id="circulo"></div></a>
 
-	<a id="tecla-3" href="#" data-toggle="popover" role="button" animation="true" data-placement="left" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/bancl.html'>#BibliotecaYArchivoNacionalDeChile</a>"><img class="icono" src="https://78.media.tumblr.com/d1dfe64d5e881a01562bdcaa61c79e06/tumblr_p7eq96W0tA1xqailxo1_1280.jpg" style="width:100%"></img></a>
+	<a id="tecla-3" href="etiquetas/bancl.html" data-toggle="popover" role="button" animation="true" data-trigger="hover" data-placement="left" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/bancl.html'>#BibliotecaYArchivoNacionalDeChile</a>"><div id="circulo"></div></a>
 
 
-	<a id="tecla-4" href="#" data-toggle="popover" role="button" animation="true" data-placement="right" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/mclap.html'>#MuseoChilenoDeArtePrecolombino</a>"><img class="icono" src="https://78.media.tumblr.com/a15fd7f15fd3b435b94d8940eb6a0599/tumblr_p7ez2lwMtj1xqailxo1_1280.jpg" style="width:100%"></img></a>
+	<a id="tecla-4" href="etiquetas/mclap.html" data-toggle="popover" role="button" animation="true" data-trigger="hover" data-placement="right" data-html='true' data-content="<a style='text-decoration:none; color:rgb(203,79,76)' href='etiquetas/mclap.html'>#MuseoChilenoDeArtePrecolombino</a>"><div id="circulo"></div></a>
 
 
 
