--- a/nosotros.html
+++ b/nosotros.html
@@ -29,6 +29,7 @@
 <div id="sidebar" class="sidebar">
     	<a href="#" class="cerrar" onclick="ocultar()"></i></a>
 		<ul class="menu">
+			<li><a href="index.html">INICIO</a></li>
     		<li><a href="proyecto.html">SOBRE EL PROYECTO</a></li>
     		<li><a href="codigo.html">CÓDIGO</a></li>
     		<li><a href="creditos.html">CRÉDITOS IMÁGENES</a></li>
@@ -42,7 +43,7 @@
 
 
 <div class="contenedor"> 
-	<h1><a id="titulo" href="index.html">MEMORIAS CARTOGRÁFICAS</a></h1>
+	<h1><a id="titulo" href="index.html">MEMORIA CARTOGRÁFICA</a></h1>
 </div>
 
 <div id="parrafo"><p>
