--- a/proyecto.html
+++ b/proyecto.html
@@ -17,6 +17,7 @@
 	<div id="sidebar" class="sidebar">
     	<a href="#" class="cerrar" onclick="ocultar()"></i></a>
 		<ul class="menu">
+            <li><a href="index.html">INICIO</a></li>
     		<li><a style="color:rgb(110,79,76)">SOBRE EL PROYECTO</a></li>
     		<li><a href="codigo.html">CÓDIGO</a></li>
     		<li><a href="creditos.html">CRÉDITOS IMÁGENES</a></li>
@@ -30,10 +31,10 @@
 
 
 <div class="contenedor"> 
-	<h1><a id="titulo" href="index.html">MEMORIAS CARTOGRÁFICAS</a></h1>
+	<h1><a id="titulo" href="index.html">MEMORIA CARTOGRÁFICA</a></h1>
 </div>
 <div id="izq">
-<div id="parrafo"><p><i>Memorias cartográficas</i> es un modelo de visualización para los límites visuales que se trazan sobre las tierras que habitamos, propone discutir en torno a las diversas representaciones cartográficas que conforman el imaginario de nuestros territorios.<br>
+<div id="parrafo"><p><i>Memoria cartográfica</i> es un modelo de visualización para los límites visuales que se trazan sobre las tierras que habitamos, propone discutir en torno a las diversas representaciones cartográficas que conforman el imaginario de nuestros territorios.<br>
 <br>
 Centrando la atención en las evocaciones que las imágenes provocan por sí mismas y en las relaciones cambiantes que establecen entre ellas y con quien las observa, este atlas de imágenes plantea una cartografía abierta que no se lee de manera secuencial, sino está dispuesta de manera anacrónica, adireccional e indeterminada, y su lectura idea un proceso de exploración y presentación de sistemas de relaciones no-evidentes.<br>
 <br>
