--- a/codigo.html
+++ b/codigo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Créditos</title>
+	<title>Codigo</title>
 
 	<link rel="stylesheet" type="text/css" href="estilos/estilo-codigo.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
@@ -17,10 +17,12 @@
 <div id="sidebar" class="sidebar">
     	<a href="#" class="cerrar" onclick="ocultar()"></i></a>
 		<ul class="menu">
+            <li><a href="index.html">INICIO</a></li>
     		<li><a href="proyecto.html">SOBRE EL PROYECTO</a></li>
     		<li><a style="color:rgb(110,79,76)">CÓDIGO</a></li>
     		<li><a href="creditos.html">CRÉDITOS IMÁGENES</a></li>
     		<li><a href="nosotros.html">SOBRE NOSOTROS</a></li>
+
 		</ul>
 		
   </div>
@@ -30,7 +32,7 @@
 
 
 <div class="contenedor"> 
-	<h1><a id="titulo" href="index.html">MEMORIAS CARTOGRÁFICAS</a></h1>
+	<h1><a id="titulo" href="index.html">MEMORIA CARTOGRÁFICA</a></h1>
 </div>
 
 <div id="parrafo"><p>El código de esta página está escrito en HTML, CSS y Javascript (y algunas librerías).<br> Para cualquier aporte, corrección o comentario seguir el <a id="github" target="blank_" href="https://github.com/bachiloglu/memoriascartograficas">siguiente link</a>.
