--- a/etiquetas/asa.html
+++ b/etiquetas/asa.html
@@ -42,15 +42,13 @@
     
 
 
-<div id="contenedor" style="width:150%">
-	<div class="row" style="width"> 
+<div id="contenedor" style="width:160%">
+	<div class="row"> 
 	  <div class="column" style="padding-top:10px">
 
 	    <a href="https://memorias-cartograficas.tumblr.com/post/173081884157/axsu-detalle-con-motivos-recurrentes-jorobado-con" target="_blank"><img src="https://78.media.tumblr.com/53250bc9814b745569ce92196db46dd7/tumblr_p7ev6d6kKK1xqailxo1_1280.jpg" style="width:100%"></a>
+	    </div>
 
-	    
-
-	  </div>
 
 
 	  <div class="column" style="padding-top:0px">
@@ -58,6 +56,8 @@
 	    <a href="https://memorias-cartograficas.tumblr.com/post/173081854957/axsu-campeando-un-toro-recuperado-en" target="_blank"><img src="https://78.media.tumblr.com/96fd437ada0ed39c5f1b1070154b1a1b/tumblr_p7ev4oiqph1xqailxo1_1280.jpg" style="width:100%"></a>
 
 	  </div>
+
+
 
 
 	  <div class="column" style="padding-top:60px">
@@ -74,10 +74,16 @@
 	    <a href="https://memorias-cartograficas.tumblr.com/post/173083736157/axsu-jalqa-con-jawan-y-uran-bordes-superior-e" target="_blank"><img src="https://78.media.tumblr.com/54d4affb91f9def487f392f4113a1e19/tumblr_p7eya9plCP1xqailxo1_1280.jpg" style="width:100%"></a>
 
 	    <a href="https://memorias-cartograficas.tumblr.com/post/173084058792/paisaje-de-la-regi%C3%B3n-de-jalqa-recuperado-en" target="_blank"><img src="https://78.media.tumblr.com/b26c4363bec490e388a95ab6d77c0d1e/tumblr_p7eyunzD7x1xqailxo1_1280.jpg" style="width:100%"></a>
+
+	    <a href="https://memorias-cartograficas.tumblr.com/post/173083714122/axsu-jalqa-caravana-a-la-derecha-khurus-a-la" target="_blank"><img src="https://78.media.tumblr.com/03e15fcdf2de79fb183a26315617f150/tumblr_p7ey8woask1xqailxo1_1280.jpg" style="width:100%"></a>
+
 	  </div>
 
-	  <div class="column" style="padding-top: 70px;">
+	  <div class="column" style="padding-top: 40px;">
 	    <a href="https://memorias-cartograficas.tumblr.com/post/173081915157/axsu-detalle-del-motivo-supay-dios-de-los" target="_blank"><img src="https://78.media.tumblr.com/fb243d340b937086961e7ab50556a358/tumblr_p7ev89Uk8f1xqailxo1_1280.jpg" style="width:100%"></a>
+		
+		<a href="https://memorias-cartograficas.tumblr.com/post/173078214897/axsu-tarabuco-de-luto-recuperado-en" target="_blank"><img src="https://78.media.tumblr.com/fe820c76d2d72848a4491a178cd0bf66/tumblr_p7eotxRKgy1xqailxo1_1280.jpg" style="width:100%"></a>
+
 	  </div>
 
 	<div class="column">
@@ -87,6 +93,12 @@
 
 	  
 	</div>
+
+
+
+
+
+
 
 <div id="footer">
 	<ul>
